...
                                    context,
                                    MaterialPageRoute(
                                        builder: (context) =>
                                            HalamanRegister()));
                              },
                              child: Text(
                                "Sign Up",
                                style: TextStyle(color: Colors.deepOrange),
                              ))
                        ],
                      )
                    ],
                  ),
...
